The skeleton for the types of pages I need is complete. Thankfully the taxonomy feature is unnecessary for the tree structure. And cross links should be all I need to keep things organized.

--- a/content/_index.html
+++ b/content/_index.html
@@ -1,6 +1,13 @@
 ---
 title: "Home Page"
-date: 2022-06-25
-draft: false
 ---
 
+<a href="/u/">
+  <h1>Evan DiBona</h1>
+  <h2>Public</h2>
+</a>
+
+<a href="/v/">
+  <h1>Evan Charles DiBona</h1>
+  <h2>Private</h2>
+</a>
