slow add of content, and smoothed out some of the header stuff

--- a/content/_index.html
+++ b/content/_index.html
@@ -3,8 +3,8 @@ title: "Home Page"
 ---
 
 <a href="/u/">
-  <h1>Evan DiBona</h1>
-  <h2>Public</h2>
+  <h1 class="u">Evan DiBona</h1>
+  <h2 class="u">Public</h2>
 </a>
 
 <a href="/v/">
