--- a/content/v/_index.html
+++ b/content/v/_index.html
@@ -1,6 +1,7 @@
 ---
 title: "Private"
+subtitle: "Evan Charles DiBona"
+Date: "2022-06-25"
 ---
 
-Welcome to the Private trunk of this website. 
-
+This is where you will find things which interest me, and more private ambitions.
