--- a/content/_index.html
+++ b/content/_index.html
@@ -2,12 +2,17 @@
 title: "Home Page"
 ---
 
-<a href="/u/">
-  <h1 class="u">Evan DiBona</h1>
-  <h2 class="u">Public</h2>
-</a>
-
-<a href="/v/">
-  <h1>Evan Charles DiBona</h1>
-  <h2>Private</h2>
-</a>
+<div class="pure-g">
+  <div class="pure-u-1-3">
+    <a href="/u/">
+      <h2 class="u">Public</h2>
+    </a>
+  </div>
+  <div class="pure-u-1-3">
+  </div>
+  <div class="pure-u-1-3">
+    <a href="/v/">
+      <h2>Private</h2>
+    </a>
+  </div>
+</div>
