--- a/content/_index.html
+++ b/content/_index.html
@@ -2,7 +2,7 @@
 title: "Home Page"
 ---
 
-<div class="pure-g">
+<div class="pure-g header">
   <div class="pure-u-1-3">
     <a href="/u/">
       <h2 class="u">Public</h2>
