Stylized index section for the Notary & Document Svc pages

--- a/content/u/ntry/8.html
+++ b/content/u/ntry/8.html
@@ -13,34 +13,56 @@ draft: false
 </p>
 
 <table class="pure-table c">
+  <thead>
+    <tr>
+      <th></th>
+      <th> Morning </th>
+      <th> Afternoon </th>
+      <th> Evening </th>
+    </tr>
+  </thead>
   <tbody>
     <tr class="pure-table-odd">
-      <td>Monday</td>
-      <td>Unavailable</td>
+      <td>Mon</td>
+      <td>X</td>
+      <td>X</td>
+      <td>X</td>
     </tr>
     <tr>
-      <td>Tuesday</td>
-      <td>Unavailable</td>
+      <td>Tue</td>
+      <td>X</td>
+      <td>X</td>
+      <td>X</td>
     </tr>
     <tr class="pure-table-odd">
-      <td>Wednesday</td>
-      <td>Unavailable</td>
+      <td>Wed</td>
+      <td>X</td>
+      <td>X</td>
+      <td>X</td>
     </tr>
     <tr>
-      <td>Thursday</td>
-      <td>Unavailable</td>
+      <td>Thu</td>
+      <td>X</td>
+      <td>X</td>
+      <td>X</td>
     </tr>
     <tr class="pure-table-odd">
-      <td>Friday</td>
-      <td>Unavailable</td>
+      <td>Fri</td>
+      <td>X</td>
+      <td>X</td>
+      <td>X</td>
     </tr>
     <tr>
-      <td>Saturday</td>
-      <td><span class="sc">7am &ndash; 11pm</span></td>
+      <td>Sat</td> 
+      <td>Av.</td>
+      <td>Av.</td>
+      <td>Av.</td>
     </tr>
     <tr class="pure-table-odd">
-      <td>Sunday</td>
-      <td><span class="sc">7am &ndash; 11pm</span></td>
+      <td>Sun</td> 
+      <td>Av.</td>
+      <td>Av.</td>
+      <td>Av.</td>
     </tr>
   </tbody>
 </table>
